q001 example domain clear, looking for a good model implementation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>goodui gitclass</title>
+		<title>goodui gitClass</title>
 		<link href="doc/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
