created item- and list view, registering list view at model using listenTo doesn't return

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
 		<p>There'll never be more than one question except the original question raises another one that has to be answered as a step towards the original question's solution. So basically we're facing a stack here.</p>
 
-		<p>Ready? I am. Let's start <a href="doc/stack.txt">the stack</a>!</p>
+		<p>Ready? I am. You can start with what I've <a href="doc/learned.html">learned</a> so far.</p>
+
+		<p>And if you have figured out your answers to the existing questions, have a look at <a href="doc/stack.txt">the stack</a> for the current one!</p>
 
 
 		</div> <!-- container -->
