--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,6 +48,7 @@
 	<script src="lib/handlebars-1.0.rc.1.js"></script>
 
 	<script src="js/model.js"></script>
+	<script src="js/view.js"></script>
 	<script src="js/main.js"></script>
     
     
