added impl and doc for dom event to handler mapping

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,6 +61,7 @@
 		<td>{{date}}</td>
 		<td>{{#each attending}} <span class="attending">{{this}}</span> {{/each}}</td>
 		<td>{{#each absent}} <span class="absent">{{this}}</span> {{/each}}</td>
+		<td><button class="delbtn">delete</button></td>
 	</script>
     
     
