cleaned up the hacks in the code - now doing things the nice way

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<ul class="nav">
 					<li><a href="doc/stack.txt">stack</a></li>
 					<li><a href="doc/learned.html">learned</a></li>
+					<li><a href="src/main/webapp/index.html">application</a></li>
 				</ul>
 			</div>
 		</div>
