--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,7 @@
                 <option>Saskia</option>
                 <option>Verena</option>
             </select>
-            <button type="button" onClick="addNewEvent(this.form)">add new event</button>
+            <button type="button">add new event</button>
         </form>
     </div>
 	
