made spring mvc work - next task: provide a RESTful API with it and use it

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,6 +54,11 @@
 		<h2>Log output</h2>
 		<pre id="log-el"></pre>
 	</div>
+	
+	<div id="doc" class="widepagepart">
+		<h2>Technical documentation</h2>
+		<a href="documentation.html">Technical documentation</a> on this application 
+	</div>
     
     
 
